# diff-gpt

./: .gitignore  README.md  pyproject.toml
benchmarks/: anomaly_demo.py  diff_bench.py  diff_bench_decimal.py  ett_bench.py  m4_bench.py  prob_m4_bench.py  profile_text.py
papers/: paper.tex  paper_ru.tex
src/diff_gpt/: data_loader.py  diff_gpt.py  encoder_decoder.py  numa.py  train.py  train_ddp.py  trainer.py
src/diff_gpt/metrics/: __init__.py  probabilistic.py
src/diff_gpt/model/: block.py  engine.py  gpt.py  mha.py  rms_norm.py  rope.py
src/diff_gpt/optimizer/: adamw_schedulefree.py
src/diff_gpt/sampler/: nucleus.py  sampler.py  temperature.py
tests/diff_gpt/: test_data_loader.py  test_diff_gpt.py  test_numa.py  test_text.py  test_train.py
tests/diff_gpt/encoder_decoder/: test_encoder_decoder.py
tests/diff_gpt/metrics/: test_probabilistic.py
tests/diff_gpt/model/: test_block.py  test_engine.py  test_gpt.py  test_mha.py  test_rope.py  test_rope_freqs.py
tests/diff_gpt/optimizer/: test_adamw_schedulefree.py
tests/diff_gpt/sampler/: test_nucleus_sampler.py  test_temperature_sampler.py
